clusters/default/dashboard/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-ingressroute
  namespace: dashboard
spec:
  routes:
  - kind: Rule
    match: Host(`dashboard.ryanschnabel.com`)
    services:
    - kind: TraefikService
      name: api@internal
