clusters/default/dashboard/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: dashboard
spec:
  routes:
  - kind: Rule
    match: Host(`dashboard.ryanschnabel.com`)  
    services:
    - kind: TraefikService
      name: api@internal
    middlewares:
      - name: traefik-forward-auth
